src/assets/styles/pibss.css
/* PIBSS DATABASE STYLES BELOW */
section.options {
  padding-bottom: 0;
}

.options-inputs {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  align-items: center;
  gap: 2rem;
  margin-bottom: 2rem;
}

.options-inputs div {
  display: flex;
  flex-direction: column;
}

label {
  font-family: var(--plex-sans);
  font-weight: 700;
}

select {
  margin: 0;
  font-size: 1.5rem;
  padding: 0.5rem 1rem;
}

select option {
  color: black;
}

.entries {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  gap: 1rem;
  width: 100%;
}

.pibss-card {
  flex: 1 1 calc(50% - 0.5rem);
  display: flex;
  gap: 1rem;
  min-width: 540px;
}

.pibss-picture {
  min-width: 0;
  flex-basis: 180px;
  flex-shrink: 0;
  height: auto;
  animation: scale-out ease-out backwards;
  animation-timeline: view();
  animation-range-start: cover 10%;
  animation-range-end: cover 30%;
}

@keyframes scale-out {
  0% {
    transform: scale(0);
  }
  100% {
    transform: scale(1);
  }
}

.pibss-card-text {
  display: flex;
  flex-direction: column;
  min-width: 0;
  width: 100%;
}

.pibss-name {
  line-height: 1.2;
  font-size: 3rem;
  position: relative;
  overflow: clip;
  display: inline-block;
}

.pibss-type, .pibss-country, .pibss-date, .pibss-location {
  font-size: 1.5rem;
  position: relative;
  overflow: clip;
  display: inline-block;
}

.pibss-type::before, .pibss-country::before, .pibss-date::before, .pibss-location::before {
  content: '';
  position: absolute;
  inset: 0;
  width: 100%;
  height: 100%;
  background-color: white;
  animation: wipe-up ease-out both;
  animation-timeline: view();
  animation-range-start: cover 10%;
  animation-range-end: cover 50%;
}

.search-input {
  padding: 0.5rem 1rem;
  border: 16px solid var(--central-ministry-colour);
  font-size: 1.5rem;
  min-width: 0;
  width: 80%;
  height: 100%;
}

.options-submit {
  margin-bottom: 0;
  font-size: 1.5rem;
}

/* PIBSS DATABASE STYLES ABOVE */
/* PIBSS STATISTICS STYLES BELOW */
.value {
  font-size: 10rem;
  margin-bottom: -1rem;
  line-height: 1.1;
  display: inline-block;
  overflow: hidden;
  transition: transform 0.3s ease-in-out;
}
.animate-shrink-grow {
  animation: shrink 0.3s ease-in-out 2 alternate;
}
@keyframes shrink {
  0% { transform: scale(1); }
  100% { transform: scale(0); }
}
.text {
  font-size: 4rem;
  margin-bottom: 4rem;
}
.charts {
  display: grid;
  grid-template-columns: 1fr 1fr;
  grid-template-rows: max-content max-content;
  gap: 2rem;
  text-align: center;
  align-items: start;
}
.charts div {
  min-width: 0;
  min-height: 15rem;
  position: relative;
}
#yearly-new-citizens, #population-history {
  height: 100%;
}
/* PIBSS STATISTICS STYLES ABOVE */
/* PIBSS LOGIN STYLES BELOW */
.notice-text {
  font-size: 2rem;
}
section.login-form {
  display: flex;
  flex-wrap: wrap;
  gap: 2rem;
  justify-content: center;
  padding-top: 0;
}
.login-item {
  display: flex;
  flex-direction: column;
}
.login-item label {
  font-size: 3rem;
}
.login-item input {
  padding: 0.5rem 1rem;
  border: 16px solid var(--central-ministry-colour);
  font-size: 2rem;
  min-width: 0;
}
.login-form button {
  margin: 0;
  padding: 0.5rem 2rem;
  height: fit-content;
  align-self: flex-end;
}
/* PIBSS LOGIN STYLES ABOVE */
/* MEDIA QUERIES BELOW */
@media (max-width: 600px) {
  .entries {
    flex-direction: column;
    flex-wrap: nowrap;
    align-items: stretch;
  }
  .pibss-card {
    gap: 0.5rem;
    min-width: 0;
  }
  .pibss-picture {
    flex-shrink: 1;
  }
  .pibss-name {
    font-size: 1.5rem;
  }
  .pibss-type, .pibss-country, .pibss-date, .pibss-location {
    font-size: 1rem;
  }
  .options-submit {
    justify-self: baseline;
  }
  .value {
    font-size: 4rem;
    margin-bottom: -0.5rem;
  }
  .text {
    font-size: 1.5rem;
    margin-bottom: 3rem;
  }
  .charts {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
  }
}
/* MEDIA QUERIES ABOVE */

